<resources>
    <string name="app_name">doumu</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_name">用户名</string>
    <string name="login_pwd">密码</string>
    <string name="login_btn">登录</string>
    <string name="forget_password">忘记密码</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="lastLoginIp">上次登录地址：</string>
    <string name="lastLoginDate">上次登录时间：</string>
    <string name="new_pwd">更新密码：</string>
    <string name="button_new_pwd">更新密码</string>
</resources>
